Adding Bootstrap 3 to the project

--- a/front/index.html
+++ b/front/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> My Portfolio </title>
+		 <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title> My Portfolio - Victor Trejo </title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/journal-bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<div>
-			<hgroup>
-				<header>
-					<h1>Victor Trejo</h1>
-					<h2>Learning is awesome!</h2>
-				</header>
-			</hgroup>
-			<article>
-				This is an article...
-			</article>
-			<footer>
+		<div id="page">
+			<!-- header start -->
+			<header class="container">
+				<div class="navbar navbar-default navbar-fixed-top">
+					<div class="navbar-header">
+						<h1>Victor Trejo</h1>
+						<h4>Learning is awesome!</h4>
+					</div>
+					<nav>
+						 <ul class="nav navbar-nav navbar-right">
+					            <li class="nav active"><a href="#work">Work</a>
+					            </li>
+					            <li class="nav"><a href="#about">About</a>
+					            </li>
+					            <li class="nav"><a href="#contact">Contact</a>
+					            <li class="nav"><a href="#resume">Resume</a>
+					            </li>
+      					</ul>	
+					</nav>
+				</div>
+			</header>
+			<!-- header end -->
+
+			<!-- page body start -->
+			<section id="page-body" class="container">
+					sdfdsfds
+			</section>
+			<!-- page body end -->
+			
+			<!-- footer start -->
+			<footer class="container">
 				By Victor Trejo.
 			</footer>
+			<!-- footer end -->
+			
 		</div>
+
+		<script src="js/jquery-2.0.3.min"></script>
+		<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
