fixing resume section

--- a/front/index.html
+++ b/front/index.html
@@ -25,17 +25,21 @@
 					</div>
 					<nav>
 						 <ul class="nav navbar-nav navbar-right">
-					            <li class="nav active">
-					            	<a href="#work">Work</a>
-					            </li>
+					            
 					            <li class="nav">
 					            	<a href="#about">About</a>
 					            </li>
-					            <li class="nav">
-					            	<a href="#contact">Contact</a>
+					            <li class="nav active">
+					            	<a href="#academic-projects">Academic projects</a>
 					            </li>
 					            <li class="nav">
-					            	<a href="#resume">Resume</a>
+					            	<a href="#personal-projects">Personal projects</a>
+					            </li>
+					            <li class="nav">
+					            	<a href="#education">Education</a>
+					            </li>
+					            <li class="nav">
+					            	<a href="#experience">Experience</a>
 					            </li>
       					</ul>	
 					</nav>
@@ -52,7 +56,7 @@
 				     </div>
 
 				     <div class="col-md-9">
-				     		<h1 class="cursive-style">It's me, Victor Trejo</h1>
+				     		<h1 class="cursive-style">It's me, Victor!</h1>
 					  		<h2>
 					  			<p>
 					  				Software and mobile developer.
@@ -312,17 +316,16 @@ Machines.</h3>
 					</section>
 
 
-
-					<section id="personal-projects">
+					<section id="experience">
 						<div class="row">
 							
 								<div class="page-header">
 								  <h1 class="cursive-style">
-								  	<span class="glyphicon glyphicon-file"></span> Resume
+								  	<span class="glyphicon glyphicon-road"></span> Experience
 								  </h1>
 								</div>
 								<div class="content">
-									dafsdfd
+									<span class="glyphicon glyphicon-file"></span>see full Resume...
 								</div>
 						</div>
 					</section>
